--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>Time, Space, Complexity</h1>
+	<p>Time Complexity is a way to measure how the execution time of an algorithm grows with the size of the input. It tells us the efficient of an algorithm in terms of input size n, ignoring machine-dependent factors.</p>
+	<p><b>Space Complexity</b> is the amount of memory an algorithm needs relative to the input size n. an algorithm has O(n) space complexity means The memory used grows linearly with the input size.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
